# texxy2

./: .aider.chat.history.md  .aider.input.history  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.aider.tags.cache.v4/: cache.db
.github/workflows/: ci.yml
data/: CMakeLists.txt  texxy.desktop  texxy.metainfo.xml
featherpad/: CMakeLists.txt  about.ui  brackets.cpp  config.cpp  config.h  encoding.cpp  encoding.h  filedialog.h  find.cpp  fpwin.cpp  lineedit.cpp  lineedit.h  loading.cpp  main.cpp  replace.cpp  session.cpp  sidepane.cpp  sidepane.h  singleton.cpp  syntax.cpp  tabbar.cpp
featherpad/highlighter/: highlighter-patterns.cpp  highlighter-sh.cpp
resources/qrc/: texxy.qrc
src/: CMakeLists.txt
src/core/: CMakeLists.txt  config.cpp  config.h  encoding.cpp  encoding.h  loading.cpp  loading.h  main.cpp  save.cpp  session.cpp  session.h
src/features/: CMakeLists.txt
src/features/highlighter/: CMakeLists.txt  highlighter-block.cpp  highlighter-cmake.cpp  highlighter-comments.cpp  highlighter-css.cpp  highlighter-fountain.cpp  highlighter-html.cpp  highlighter-java.cpp  highlighter-json.cpp  highlighter-lua.cpp  highlighter-markdown.cpp  highlighter-pascal.cpp  highlighter-patterns.cpp  highlighter-perl-regex.cpp  highlighter-quotes.cpp  highlighter-regex.cpp  highlighter-rest.cpp  highlighter-ruby.cpp  highlighter-rust.cpp  highlighter-sh.cpp  highlighter-tcl.cpp  highlighter-toml.cpp  highlighter-utils.cpp  highlighter-xml.cpp  highlighter-yaml.cpp  highlighter.cpp  highlighter.h  textblockdata.cpp
src/features/search/: CMakeLists.txt  find.cpp  replace.cpp
src/features/syntax/: CMakeLists.txt  brackets.cpp  syntax.cpp
src/features/textedit/: CMakeLists.txt  clipboard.cpp  column.cpp  core.cpp  helpers.cpp  indent.cpp  input.cpp  linenumbers.cpp  misc.cpp  paint.cpp  search.cpp  selection.cpp  sort.cpp  textedit.h  textedit_prelude.h  viewpos.cpp
src/platform/: CMakeLists.txt  signalDaemon.cpp  signalDaemon.h  singleton.cpp  singleton.h  window_utils.cpp  x11.cpp  x11.h
src/ui/: CMakeLists.txt  texxy_ui_prelude.h  texxywindow.cpp  texxywindow.h  texxywindow.ui  window_documents.cpp  window_edit.cpp  window_sessions.cpp  window_tabs.cpp
src/ui/common/: filedialog.h  messagebox.h  warningbar.h
src/ui/dialogs/: CMakeLists.txt  about.ui  fontDialog.cpp  fontDialog.h  fontDialog.ui  pref.cpp  pref.h  prefDialog.ui  sessionDialog.ui
src/ui/icons/: CMakeLists.txt  svgicons.cpp  svgicons.h
src/ui/ui/: CMakeLists.txt  lineedit.cpp  lineedit.h  menubartitle.cpp  menubartitle.h  searchbar.cpp  searchbar.h  sidepane.cpp  sidepane.h  tabbar.cpp  tabbar.h  tabpage.cpp  tabpage.h  tabwidget.cpp  tabwidget.h  vscrollbar.cpp  vscrollbar.h
texxy/: CMakeLists.txt  about.ui  brackets.cpp  config.cpp  config.h  encoding.cpp  encoding.h  filedialog.h  find.cpp  fontDialog.cpp  fontDialog.h  fp.ui  fpwin.cpp  fpwin.h  lineedit.cpp  lineedit.h  loading.cpp  loading.h  main.cpp  menubartitle.cpp  menubartitle.h  messagebox.h  org.texxy.Application.xml  pref.cpp  pref.h  prefDialog.ui  printing.cpp  printing.h  replace.cpp  save.cpp  searchbar.cpp  searchbar.h  session.cpp  session.h  sessionDialog.ui  sidepane.cpp  sidepane.h  signalDaemon.cpp  signalDaemon.h  singleton.cpp  (+30 more)
texxy/data/: help  texxy.metainfo.xml  texxy.qrc
texxy/highlighter/: highlighter-cmake.cpp  highlighter-css.cpp  highlighter-fountain.cpp  highlighter-html.cpp  highlighter-java.cpp  highlighter-json.cpp  highlighter-lua.cpp  highlighter-markdown.cpp  highlighter-pascal.cpp  highlighter-perl-regex.cpp  highlighter-regex.cpp  highlighter-rest.cpp  highlighter-ruby.cpp  highlighter-rust.cpp  highlighter-tcl.cpp  highlighter-toml.cpp  highlighter-xml.cpp  highlighter-yaml.cpp  highlighter.cpp  highlighter.h
